--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<h1>Hello world<h1>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Portfolio - Yengo Amelia</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header class="navbar">
+    <div class="logo">Yengo Amelia</div>
+    <nav>
+        <ul class="nav-link">
+            <li><a href="#">Alternance</a></li>
+            <li><a href="#">Projets</a></li>
+            <li><a href="#">Compétences</a></li>
+            <li><a href="#">Veille technologique</a></li>
+            <li><a href="#">CV</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="hero">
+    <h1>Développeuse Web</h1>
+    <p>Création de sites modernes, performants et élégants</p>
+    <button class="btn">Voir mes projets</button>
+</section>
+<script src="js/script.js"></script>
+</body>
+</html>
+
