avant dernière version

--- a/veille.html
+++ b/veille.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Menu | Yengo Amelia</title>
+    <title>Veille technologique | Yengo Amelia</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -23,14 +23,9 @@
         </ul>
     </nav>
 </header>
-<main>
-<section class="hero" style="background-image: url('img/fond.jpg');">
 
-    <h1>DÉVELOPPEUSE BTS SIO</h1>
-    <p><strong>PORTFOLIO</strong></p>
-    <p>Création de sites modernes, performants et élégants</p>
-    <button class="btn"><strong>A PROPOS DE MOI</strong></button>
-</section>
+<main style="margin-top: 120px; min-height: 70vh;">
+    <!-- Contenu alternance ici -->
 </main>
 
 <footer class="motivation">
@@ -60,5 +55,3 @@
 <script src="js/script.js"></script>
 </body>
 </html>
-
-
