--- a/alternance.html
+++ b/alternance.html
@@ -19,14 +19,15 @@
             <li><a href="projets.html">Projets</a></li>
             <li><a href="competence.html">Compétences</a></li>
             <li><a href="veille.html">Veille technologique</a></li>
-            <li><a href="cv.html">CV</a></li>
+            <li><a href="cv.pdf" target="_blank">CV</a></li>
         </ul>
     </nav>
 </header>
 
+
 <!-- IMAGE PLEIN ÉCRAN + TEXTE AU MILIEU BAS -->
 <section class="her" style="background-image: url('img/alter.jpg');">
-    <p class="texte"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <p class="textee"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         ARCHIA 365, basée à Paris est une société de conseil en technologies de l’information, spécialisée dans la conception et l’optimisation des systèmes d’information.<br>
         Au fil des ans, elle a su s’imposer comme un acteur majeur dans le domaine du conseil en technologies de l’information, accompagnant ses clients<br> dans 
         l’optimisation de leurs systèmes d’information grâce à des compétences pointues en architecture d’entreprise et en intégration de l’intelligence artificielle.<br>
