--- a/az.html
+++ b/az.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CV | Yengo Amelia</title>
+    <title>Alternance | Yengo Amelia</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -19,14 +19,25 @@
             <li><a href="projets.html">Projets</a></li>
             <li><a href="competence.html">Compétences</a></li>
             <li><a href="veille.html">Veille technologique</a></li>
-            <li><a href="cv.html">CV</a></li>
+            <li><a href="cv.pdf" target="_blank">CV</a></li>
         </ul>
     </nav>
 </header>
 
-<main style="margin-top: 120px; min-height: 70vh;">
-    <!-- Contenu alternance ici -->
-</main>
+<section class="hera" style="background-image: url('img/bleu.jpg');">
+    <div class="ima">
+        <img class="ima-img"
+             src="https://www.webasha.com/uploads/course/images/633ac973268df1664797043.AZ900_Training-and-certification.jpg"
+            alt="Certification AZ-900">
+
+        <p class="imat">
+            ARCHIA 365, basée à Paris est une société de conseil en technologies de l’information, spécialisée dans la conception et l’optimisation des systèmes d’information.<br><br>
+            Au fil des ans, elle a su s’imposer comme un acteur majeur dans le domaine du conseil en technologies de l’information, accompagnant ses clients dans 
+            l’optimisation de leurs systèmes d’information grâce à des compétences pointues en architecture d’entreprise et en intégration de l’intelligence artificielle.<br><br>
+            Notre mission est de transformer les stratégies des entreprises en solutions technologiques performantes, en les accompagnant à chaque étape de leur transformation numérique.
+        </p>
+    </div>
+</section>
 
 <footer class="motivation">
 
