--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
             <li><a href="projets.html">Projets</a></li>
             <li><a href="competence.html">Compétences</a></li>
             <li><a href="veille.html">Veille technologique</a></li>
-            <li><a href="cv.html">CV</a></li>
+            <li><a href="cv.pdf" target="_blank">CV</a></li>
         </ul>
     </nav>
 </header>
+
 <main>
 <section class="hero" style="background-image: url('img/fond.jpg');">
 
     <h1>DÉVELOPPEUSE BTS SIO</h1>
     <p><strong>PORTFOLIO</strong></p>
-    <p>Création de sites modernes, performants et élégants</p>
-    <button class="btn"><strong>A PROPOS DE MOI</strong></button>
+    <a href="btn.html" class="btn"><strong>A PROPOS DE MOI</strong></a>
+
 </section>
 </main>
 
@@ -60,5 +61,3 @@
 <script src="js/script.js"></script>
 </body>
 </html>
-
-
