--- a/veille.html
+++ b/veille.html
@@ -19,7 +19,7 @@
             <li><a href="projets.html">Projets</a></li>
             <li><a href="competence.html">Compétences</a></li>
             <li><a href="veille.html">Veille technologique</a></li>
-            <li><a href="cv.html">CV</a></li>
+            <li><a href="cv.pdf" target="_blank">CV</a></li>
         </ul>
     </nav>
 </header>
