--- a/az.html
+++ b/az.html
@@ -30,11 +30,7 @@
              src="https://www.webasha.com/uploads/course/images/633ac973268df1664797043.AZ900_Training-and-certification.jpg"
             alt="Certification AZ-900">
 
-        <p class="imat">
-            ARCHIA 365, basée à Paris est une société de conseil en technologies de l’information, spécialisée dans la conception et l’optimisation des systèmes d’information.<br><br>
-            Au fil des ans, elle a su s’imposer comme un acteur majeur dans le domaine du conseil en technologies de l’information, accompagnant ses clients dans 
-            l’optimisation de leurs systèmes d’information grâce à des compétences pointues en architecture d’entreprise et en intégration de l’intelligence artificielle.<br><br>
-            Notre mission est de transformer les stratégies des entreprises en solutions technologiques performantes, en les accompagnant à chaque étape de leur transformation numérique.
+        <p class="imat">  PROJET EN COUR
         </p>
     </div>
 </section>
